--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,4 +8,8 @@
     <item
         android:id="@+id/status_setting"
         android:title="Setting" />
+
+    <item
+        android:id="@+id/all_users"
+        android:title="Item" />
 </menu>
