--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -16,7 +16,10 @@
             android:src="@mipmap/ic_launcher"/>
 
 
-
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/testButt"/>
 
         <TextView
             android:layout_width="wrap_content"
