Friends Fragmnet added

--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -6,9 +6,11 @@
     tools:context=".chat_fragments.Friends_fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="vxcvxcvxcvxc" />
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/friendsRecyclerView"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+
+   </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
