--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,12 @@
     tools:context=".MainActivity">
 
 
+    <include layout = "@layout/app_bar_layout" android:id="@+id/main_page_toolbar"/>
+
+
 <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
+    android:layout_below="@id/main_page_toolbar"
     android:layout_height="wrap_content"
     android:id="@+id/app_bar_main">
 
@@ -22,6 +26,8 @@
 
 
     <android.support.v4.view.ViewPager
+        android:paddingTop="5dp"
+        android:layout_below="@+id/app_bar_main"
         android:id="@+id/view_pager_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
