--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,8 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".login.RegisterActivity">
 
+<include layout="@layout/app_bar_layout" android:id="@+id/app_bar_register"/>
+
+
+
+    <TextView
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PLEASE ENTER YOUR DETAILS"
+        android:textSize="25sp"
+        android:layout_below="@+id/app_bar_register"
+        android:layout_marginTop="30dp"
+        android:textColor="#000000"/>
+
 
 <android.support.design.widget.TextInputLayout
+    android:paddingTop="200dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/regName">
@@ -48,11 +63,13 @@
 
 
 <Button
+    android:layout_marginTop="30dp"
     android:id="@+id/RegisterLoginInfoButton"
     android:layout_below="@+id/regPassword"
-    android:layout_width="match_parent"
+    android:layout_width="150dp"
+    android:layout_centerInParent="true"
     android:layout_height="wrap_content"
-    android:text="Register"
+    android:text="SIGN UP"
     />
 
 
