--- a/app/src/main/res/layout/user_profile_acitivity.xml
+++ b/app/src/main/res/layout/user_profile_acitivity.xml
@@ -29,9 +29,7 @@
         android:id="@+id/UserStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="220dp"
+        android:layout_centerInParent="true"
         android:text="Hey there I am using CTUP" />
 
     <Button
@@ -46,11 +44,11 @@
 
     <Button
         android:id="@+id/deleteReq"
-        android:layout_width="184dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="39dp"
         android:elevation="17dp"
         android:text="Decline Friend Request" />
 
