--- a/app/src/main/res/layout/message_single_layout.xml
+++ b/app/src/main/res/layout/message_single_layout.xml
@@ -8,36 +8,33 @@
 
 
     <TextView
-        android:layout_marginRight="30dp"
-        android:id="@+id/message_text_layout"
+        android:id="@+id/message_sender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:padding="0dp"
         android:text="Message Text"
-        android:textColor="#444444"
+        android:textColor="#000000"
         android:textSize="14sp" />
 
 
 
     <TextView
-        android:id="@+id/time_text_layout"
+        android:id="@+id/time_sender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="2dp"
-        android:layout_toEndOf="@+id/message_text_layout"
+        android:layout_toEndOf="@+id/message_sender"
         android:text="00:00"
         android:textSize="12sp" />
+
 
     <ImageView
         android:id="@+id/message_image_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignStart="@+id/message_text_layout"
-        android:layout_below="@+id/message_text_layout"
+        android:layout_below="@+id/message_sender"
         android:layout_marginLeft="0dp"
         android:padding="0dp"
         android:scaleType="centerCrop" />
