--- a/app/src/main/res/layout/message_single_layout.xml
+++ b/app/src/main/res/layout/message_single_layout.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/textmessage"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
 
 
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/message_sender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Message Text"
         android:textColor="#000000"
         android:textSize="14sp" />
-
-
 
     <TextView
         android:id="@+id/time_sender"
@@ -25,8 +25,34 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@+id/message_sender"
-        android:text="00:00"
         android:textSize="12sp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/time_receiver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="2dp"
+            android:text="00:00"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/message_receiver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="19dp"
+            android:layout_toStartOf="@id/time_receiver"
+            android:text="Message Text"
+            android:textColor="#000000"
+            android:textSize="14sp" />
+
+    </RelativeLayout>
 
 
     <ImageView
@@ -35,9 +61,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/message_sender"
-        android:layout_marginLeft="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:padding="0dp"
         android:scaleType="centerCrop" />
 
 
-</RelativeLayout>
+</LinearLayout>
