--- a/app/src/main/res/layout/activity_existing_user_login.xml
+++ b/app/src/main/res/layout/activity_existing_user_login.xml
@@ -6,15 +6,29 @@
     tools:context=".login.ExistingUserLogin">
 
 
-<include layout="@layout/app_bar_layout" android:id="@+id/app_bar_login"/>
+    <include
+        android:id="@+id/app_bar_login"
+        layout="@layout/app_bar_layout" />
 
-    <android.support.design.widget.TextInputLayout
-        android:paddingTop="150dp"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="128dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="164dp"
+        android:background="@drawable/color_shape"
+        android:elevation="10dp">
+
+
+        <android.support.design.widget.TextInputLayout
         android:id="@+id/ExisEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="50dp">
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="36dp"
+            android:textColorHint="#ffffff">
 
         <EditText
             android:layout_width="match_parent"
@@ -29,7 +43,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/ExisEmail"
-        android:layout_marginTop="40dp">
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="36dp"
+        android:textColorHint="#ffffff">
 
         <EditText
             android:layout_width="match_parent"
@@ -41,12 +58,18 @@
 
 
     <Button
-        android:layout_marginBottom="100dp"
         android:id="@+id/ExinstingUserLogin"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-      android:layout_alignParentBottom="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
+        android:layout_marginBottom="36dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:background="@drawable/white_gradient"
+        android:backgroundTint="#ffffff"
         android:text="SIGN IN " />
+
+</RelativeLayout>
 
 </RelativeLayout>
