--- a/app/src/main/res/layout/activity_starting.xml
+++ b/app/src/main/res/layout/activity_starting.xml
@@ -1,51 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/purple_gradient"
+    android:orientation="vertical"
     tools:context=".login.StartingActivity">
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="64dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/white_gradient"
+        android:backgroundTint="#ffffff"
+        android:elevation="10dp">
+
+        <Button
+            android:id="@+id/Signin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/Signin_Starting"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:background="@drawable/white_gradient"
+            android:text="SIGN IN"
+
+            />
 
 
+        <Button
+            android:id="@+id/Signin_Starting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="36dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:background="@drawable/white_gradient"
+            android:backgroundTint="#007ee5"
+            android:elevation="16dp"
+            android:text="SIGN UP"
+            android:textColor="#ffffff"
 
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/wel"/>
+            />
 
 
-<Button
-    android:layout_marginBottom="20dp"
-    android:layout_width="150dp"
-    android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:text="SIGN UP"
-    android:layout_above="@+id/Signin"
-    android:id="@+id/Signin_Starting"
-    />
-
-
-    <Button
-        android:layout_centerInParent="true"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="SIGN IN"
-        android:id="@+id/Signin"
-        android:layout_marginBottom="80dp"
-        />
-
-
-
-
-
-
-
-
-
-
+        /
 
 </RelativeLayout>
+
+
+</LinearLayout>
