--- a/app/src/main/res/layout/app_bar_layout.xml
+++ b/app/src/main/res/layout/app_bar_layout.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main_app_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/purple_gradient"
     app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
 
 </android.support.v7.widget.Toolbar>
