--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    app:theme="@style/ToolBarStyle"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -12,6 +13,7 @@
 
 <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
+    android:background="@drawable/purple_gradient"
     android:layout_below="@id/main_page_toolbar"
     android:layout_height="wrap_content"
     android:id="@+id/app_bar_main">
