--- a/app/src/main/res/layout/message_single_layout.xml
+++ b/app/src/main/res/layout/message_single_layout.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/textmessage"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
     <RelativeLayout
@@ -26,6 +26,17 @@
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@+id/message_sender"
         android:textSize="12sp" />
+
+
+        <ImageView
+            android:id="@+id/message_image_layout_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:padding="0dp"
+            android:scaleType="centerCrop" />
 
     </RelativeLayout>
 
@@ -52,18 +63,18 @@
             android:textColor="#000000"
             android:textSize="14sp" />
 
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/message_image_layout_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:padding="0dp"
+            android:scaleType="centerCrop" />
 
-    <ImageView
-        android:id="@+id/message_image_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/message_sender"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:padding="0dp"
-        android:scaleType="centerCrop" />
+
+    </RelativeLayout>
 
 
 </LinearLayout>
