private Chat and user Profile

--- a/app/src/main/res/layout/user_profile_acitivity.xml
+++ b/app/src/main/res/layout/user_profile_acitivity.xml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".menu_item.UserProfileAcitivity">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/UserImage"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:src="@drawable/beauty"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_height="250dp" />
 
     <TextView
         android:id="@+id/UserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/UserImage"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="228dp"
         android:text="Sarah Jessica"
         android:textColor="#000000"
         android:textSize="24sp" />
@@ -39,16 +34,20 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="98dp"
+        android:background="@drawable/white_gradient"
+        android:backgroundTint="#008000"
         android:elevation="12dp"
         android:text="Send Friend Request" />
 
     <Button
         android:id="@+id/deleteReq"
-        android:layout_width="wrap_content"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="39dp"
+        android:background="@drawable/white_gradient"
+        android:backgroundTint="#FF0000"
         android:elevation="17dp"
         android:text="Decline Friend Request" />
 
