--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,64 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".menu_item.Setting_activity">
 
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_margin="30dp"
             android:id="@+id/setting_image"
-            android:layout_centerHorizontal="true"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="5"
             android:src="@mipmap/ic_launcher"/>
 
 
 
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Display Name"
-            android:textSize="25dp"
             android:id="@+id/Display_name"
-            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_below="@+id/setting_image"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:text="Display Name"
+            android:textAlignment="center"
+            android:textSize="25dp"
             />
 
         <TextView
-            android:layout_margin="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/Display_name"
+
             android:id="@+id/status"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@+id/Display_name"
+            android:layout_marginBottom="16dp"
+
+            android:layout_weight="1"
             android:text="Hey There I am using CTUP"
+            android:textAlignment="center"
             />
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3">
 
         <Button
-            android:layout_above="@+id/status_button"
             android:id="@+id/Image_button"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CHANGE IMAGE"
+            android:layout_above="@+id/status_button"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="36dp"
+            android:layout_marginRight="36dp"
+            android:background="@drawable/color_shape"
+            android:text="CHANGE IMAGE"
+            android:textColor="#ffffff"
 
             />
-
-
 
         <Button
             android:id="@+id/status_button"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="CHANGE STATUS"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="20dp"
-            />
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="36dp"
+            android:layout_marginLeft="36dp"
+            android:layout_marginRight="36dp"
+            android:background="@drawable/color_shape"
+            android:text="CHANGE STATUS"
+            android:textColor="#ffffff" />
 
-</RelativeLayout>
+    </RelativeLayout>
+
+
+</LinearLayout>
