--- a/app/src/main/res/layout/custom_chat.xml
+++ b/app/src/main/res/layout/custom_chat.xml
@@ -7,25 +7,23 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-
-        android:layout_marginTop="10dp"
         android:id="@+id/customCirclulsrvire"
-        android:layout_width="36dp"
+        android:layout_width="50dp"
         android:layout_height="36dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
         android:layout_marginEnd="24dp"
+        android:layout_marginTop="8dp"
         android:src="@android:drawable/btn_star_big_on" />
 
     <TextView
         android:id="@+id/textViewtitle"
-        android:layout_width="91dp"
-        android:layout_height="29dp"
-        android:textColor="#000000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="36dp"
         android:text="Sarah Disuza"
+        android:textColor="#000000"
         android:textSize="24sp" />
 
     <TextView
