--- a/app/src/main/res/layout/message_single_layout.xml
+++ b/app/src/main/res/layout/message_single_layout.xml
@@ -14,6 +14,8 @@
         android:id="@+id/message_sender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:text="message text 1"
         android:textColor="#000000"
         android:textSize="14sp" />
 
@@ -25,6 +27,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@+id/message_sender"
+        android:text="00.00"
         android:textSize="12sp" />
 
 
@@ -49,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="2dp"
             android:text="00:00"
             android:textSize="12sp" />
