--- a/app/src/main/res/layout/user_profile_acitivity.xml
+++ b/app/src/main/res/layout/user_profile_acitivity.xml
@@ -1,53 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".menu_item.UserProfileAcitivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/UserImage"
         android:layout_width="match_parent"
-        android:layout_height="250dp" />
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_weight="5" />
 
     <TextView
         android:id="@+id/UserName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/UserImage"
-        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:text="Sarah Jessica"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="24sp" />
 
     <TextView
         android:id="@+id/UserStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Hey there I am using CTUP" />
-
-    <Button
-        android:id="@+id/sendReq"
-        android:layout_width="192dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="98dp"
-        android:background="@drawable/white_gradient"
-        android:elevation="12dp"
-        android:text="Send Friend Request" />
-
-    <Button
-        android:id="@+id/deleteReq"
-        android:layout_width="192dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="39dp"
-        android:background="@drawable/white_gradient"
-        android:elevation="17dp"
-        android:text="Decline Friend Request" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="Hey there I am using CTUP"
+        android:textAlignment="center" />
 
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3">
+
+        <Button
+            android:id="@+id/sendReq"
+            android:layout_width="192dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="98dp"
+            android:background="@drawable/color_shape"
+            android:elevation="17dp"
+            android:padding="8dp"
+            android:text="Send Friend Request"
+            android:textColor="#ffffff" />
+
+        <Button
+            android:id="@+id/deleteReq"
+            android:layout_width="192dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="39dp"
+            android:background="@drawable/color_shape"
+            android:elevation="17dp"
+            android:padding="8dp"
+            android:text="Decline Friend Request"
+            android:textColor="#ffffff" />
+
+
+    </RelativeLayout>
+
+
+</LinearLayout>
