Completed for college

--- a/app/src/main/res/layout/user_profile_acitivity.xml
+++ b/app/src/main/res/layout/user_profile_acitivity.xml
@@ -45,7 +45,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="98dp"
-            android:background="@drawable/color_shape"
+            android:background="@drawable/ripple_button"
             android:elevation="17dp"
             android:padding="8dp"
             android:text="Send Friend Request"
@@ -58,7 +58,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="39dp"
-            android:background="@drawable/color_shape"
+            android:background="@drawable/ripple_button"
             android:elevation="17dp"
             android:padding="8dp"
             android:text="Decline Friend Request"
