--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -60,7 +60,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
-            android:background="@drawable/color_shape"
+            android:background="@drawable/ripple_button"
             android:text="CHANGE IMAGE"
             android:textColor="#ffffff"
 
@@ -75,7 +75,7 @@
             android:layout_marginBottom="36dp"
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
-            android:background="@drawable/color_shape"
+            android:background="@drawable/ripple_button"
             android:text="CHANGE STATUS"
             android:textColor="#ffffff" />
 
