--- a/app/src/main/res/layout/single_friend_request.xml
+++ b/app/src/main/res/layout/single_friend_request.xml
@@ -46,7 +46,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="4dp"
         android:layout_weight="1"
-            android:background="@drawable/color_shape"
+            android:background="@drawable/ripple_button"
             android:text="accept"
             android:textColor="#ffffff" />
 
@@ -58,7 +58,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="8dp"
         android:layout_weight="1"
-        android:background="@drawable/color_shape"
+        android:background="@drawable/ripple_button"
         android:text="decline"
         android:textColor="#ffffff" />
 
